--- a/angular-tour-of-heroes/src/app/heroes/heroes.component.html
+++ b/angular-tour-of-heroes/src/app/heroes/heroes.component.html
@@ -1,10 +1,11 @@
 <h2>My Heroes</h2>
-<ul class="heroes">
+<ul class="heroes ">
     <li *ngFor="let hero of heroes" (click)="onSelect(hero)">
         <span class="badge">{{hero.id}}</span> {{hero.name}}
     </li>
 </ul>
 
+aaaa
 
 <h2>{{selectedHero.name | uppercase}} Details</h2>
 <div><span>id: </span>{{selectedHero.id}}</div>
